add datetime and gem bullet to this app

--- a/app/views/knowledges/_show_header.html.erb
+++ b/app/views/knowledges/_show_header.html.erb
@@ -26,7 +26,7 @@
       <a href="<%= knowledge_questions_path(@knowledge) %>">问题 <span class="counter"><%= @knowledge.questions_count %></span></a>
     </li>
     <li role="presentation" id="knowledge-dynastic">
-      <a href="<%= knowledge_events_path(@knowledge) %>">动态 <span class="counter"><%= @knowledge.events.count %></span></a>
+      <a href="<%= knowledge_events_path(@knowledge) %>">动态 <span class="counter"><%= @knowledge.events.size %></span></a>
     </li>
   </ul>
 </section>
