--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,31 +1,38 @@
-<% @group_events.each do |day, events|%>
-<% if @current_page.to_i == 1 or (@current_page.to_i > 1 and current_days.exclude?(day.to_s))%>
-  <div class="row">
-    <div class="col-md-12 col-lg-12 text-center">
-      <div class="owner">
-        <%= day %>
-        <% current_days << day %>
+<% @group_events.each do |day, events| %>
+  <% if current_days.exclude?(day.to_s)%>
+    <div class="row">
+      <div class="col-md-12 col-lg-12 text-center">
+        <div class="owner">
+          <%= day %>
+          <% current_days << day %>
+        </div>
       </div>
     </div>
-  </div>
-<% end %>
-<% events.each do |event| %>
-
-<%= link_to event.creator.username, user_path(event.creator)%>
-<%= event.action %>
-<% if event.eventable.class == Knowledge%>
-<%= link_to event.eventable.title, knowledge_path(event.eventable)%>
-<% elsif event.eventable.class == Review %>
-<%= link_to event.eventable.title, review_path(event.eventable)%>
-<% elsif event.eventable.class == Question %>
-<%= link_to event.eventable.title, knowledge_question_path(event.eventable.knowledge, event.eventable)%>
-<% elsif event.eventable.class == Anwser%>
-<%= link_to event.eventable.content, knowledge_question_path(event.eventable.question.knowledge, event.eventable.question)%>
-<% elsif event.eventable.class == Discussion %>
-<%= link_to event.eventable.content, knowledge_discussions_path %>
-<% elsif event.eventable.class == Comment %>
-<%= link_to event.eventable.content, review_path(event.eventable.review) %>
-<% end %>
-<%= event.created_at.strftime("%H:%M") %>
-<% end %>
+  <% end %>
+  <% events.group_by{|e| e.ownerable.title}.each do |event_owner, new_events| %>
+    <% if current_days.exclude?(day.to_s) or current_owners.exclude?(event_owner.to_s)%>
+      <div class="row">
+        <div class="col-md-12 col-lg-12 text-center">
+          <div class="owner">
+            <%current_owners << event_owner %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+    <% new_events.each do |event| %>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-2 col-lg-2">
+          <span><%= render_created_at(event.created_at) %></span>
+          <div class="thumb">
+            <%= display_avatar(event.creator, 5*5) %>
+          </div>
+          <span><%= render_creator_name(event) %></span>
+        </div>
+        <div class="col-md-8 col-lg-8 eventContentContainer">
+          <%= event.action %> :
+          <%= render_event_action(event) %>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
 <% end %>
