fix event content bug

--- a/app/views/anwsers/_anwser.html.erb
+++ b/app/views/anwsers/_anwser.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="article-body">
     <div class="article-content">
-        <%= sanitize anwser.content %>
+        <%= simple_format(anwser.content) %>
     </div>
     <% if false %>
     <!-- TO DO -->
