beautify event page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
           <%= display_avatar(@user, "150x150") %>
         </div>
         <div class="profile-details">
-            <h1><%= @user.username %></h1>
+            <h1 style="color:white;"><%= @user.username %></h1>
             <h6>知识库</h6>
         </div>
       </div>
