add sanitize to user page

--- a/app/views/knowledges/_show_header.html.erb
+++ b/app/views/knowledges/_show_header.html.erb
@@ -25,7 +25,7 @@
     <li role="presentation" id="knowledge-question">
       <a href="<%= knowledge_questions_path(@knowledge) %>">问题 <span class="counter"><%= @knowledge.questions_count %></span></a>
     </li>
-    <li role="presentation" id="knowledge-dynastic">
+    <li role="presentation" id="knowledge-event">
       <a href="<%= knowledge_events_path(@knowledge) %>">动态 <span class="counter"><%= @knowledge.events.size %></span></a>
     </li>
   </ul>
