--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Activities#index</h1>
-<p>Find me in app/views/activities/index.html.erb</p>
+<h1>Friends&rsquo; Activities</h1>
+<% @activities.each do |activity| %>
+  <div class="activity">
+  <%= link_to activity.owner.name, activity.owner if activity.owner %>
+  added comment to <%= link_to activity.trackable.knowledge.title, activity.trackable.knowledge %>
+  </div>
+<% end %>
