--- a/app/views/public_activity/question/_create.html.erb
+++ b/app/views/public_activity/question/_create.html.erb
@@ -1,1 +1,1 @@
-added comment to <%= link_to activity.trackable.knowledge.title, activity.trackable.knowledge %>
+提出了问题 <%= link_to activity.trackable.title, knowledge_question_path(activity.trackable.knowledge, activity.trackable) %>
