--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,7 +1,34 @@
-<h1>Friends&rsquo; Activities</h1>
-<% @activities.each do |activity| %>
-  <div class="activity">
-  <%= link_to activity.owner.name, activity.owner if activity.owner %>
-  added comment to <%= link_to activity.trackable.knowledge.title, activity.trackable.knowledge %>
+<div class="page-content">
+  <div class="container">
+    <div class="row">
+      <main class="col-md-9">
+        <%= render "knowledges/show_header" %>
+        <section class="knowledge-event">
+
+        <% @activities.each do |activity| %>
+          <div class="activity">
+
+            <% if activity.parameters[:knowledge_id] == @knowledge.friendly_id %>
+            <%#= activity.inspect%>
+
+            <%= link_to activity.owner.username, activity.owner if activity.owner %>
+            <%= render_activity activity %>
+            <%= time_ago(activity) %>
+          </div>
+
+          <% end %>
+        <% end %>
+      </section>
+    </main>
+    <aside class="col-md-3">
+      <%= render 'knowledges/sidebar' %>
+    </aside>
   </div>
+</div>
+</div>
+
+<%= content_for :page_javascript do %>
+<script>
+  $("#knowledge-event").addClass("active");
+</script>
 <% end %>
