--- a/app/views/public_activity/discussion/_update.html.erb
+++ b/app/views/public_activity/discussion/_update.html.erb
@@ -1,1 +1,1 @@
-更新了讨论 <%= link_to activity.trackable.content, knowledge_discussions_path(activity.trackable.knowledge, activity.trackable) %>
+更新了讨论 <%= link_to sanitize(activity.trackable.content), knowledge_discussions_path(activity.trackable.knowledge, activity.trackable) %>
