--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -8,7 +8,7 @@
         <% @activities.each do |activity| %>
           <div class="activity">
 
-            <% if activity.parameters[:knowledge_id] == @knowledge.friendly_id %>
+            <% if activity.trackable && activity.parameters[:knowledge_id] == @knowledge.friendly_id %>
             <%#= activity.inspect%>
 
             <%= link_to activity.owner.username, activity.owner if activity.owner %>
