--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,252 @@
-<h1>Hello World</h1>
+
+<body class="lp-pom-body ">
+  <!-- lp:insertions start body:before -->
+  <!-- lp:insertions end body:before -->
+  <div class="lp-element lp-pom-root" id="lp-pom-root">
+  <div id="lp-pom-root-color-overlay"></div>
+  <div class="lp-positioned-content">
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-14">
+  <h1 class="lplh-58" style="text-align: center;">
+  <span style="color:#ffffff;"><strong><span style="font-family:pt sans;"><span style="font-size:55px;">终身学习者</span></span></strong></span>
+  </h1>
+  <h1 class="lplh-58" style="text-align: center;">
+  <span style="color:#ffffff;"><strong><span style="font-family:pt sans;"><span style="font-size:55px;">的纯净交流空间</span></span></strong></span>
+  </h1>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-15">
+  <p class="lplh-22" style="text-align: center;">
+  <span style="color:#ffffff;"><span style="font-size:16px;">学习之后，来这里交流</span></span>
+  </p>
+  </div>
+  <a class="lp-element lp-pom-button" id="lp-pom-button-16" href="<%= knowledges_path %>" target=""><span class="label">立即加入我们</span></a>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-20">
+  <p class="lplh-18" style="text-align: center;">
+  <font color="#c1c1c1" face="pt sans"><span style="font-size: 14px;"><strong>在内容付费狂热的时代，<span style="color: rgb(193, 193, 193);">KnewMark</span> 为各位学习者提供一个说悄悄话的场所</strong></span></font>
+  </p>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-24">
+  <h3 class="lplh-24" style="text-align: center;">
+  <span style="color:#36b3a8;"><span style="font-size:20px;"><span style="font-family:pt sans;"><strong>评测</strong></span></span></span>
+  </h3>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-25">
+  <div class="lplh-26" style="text-align: center;">
+  <span style="font-size:14px;"><span style="font-family:pt serif;">你是学习达人吗？每次学习之后你都输出了吗？来这里输出你的学习心得。</span></span>
+  </div>
+  </div>
+  <div class="lp-element lp-pom-image" id="lp-pom-image-27">
+  <div class="lp-pom-image-container" style="overflow: hidden;">
+  <img src="https://d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/simple-video-139972/transparent.gif" alt=""></div>
+  </div>
+  <div class="lp-element lp-pom-image" id="lp-pom-image-34">
+  <div class="lp-pom-image-container" style="overflow: hidden;">
+  <img src="https://d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/simple-video-139972/transparent.gif" alt=""></div>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-35">
+  <h3 class="lplh-24" style="text-align: center;">
+  <span style="color:#36b3a8;"><span style="font-size:20px;"><span style="font-family:pt sans;"><strong>讨论</strong></span></span></span>
+  <br>
+  </h3>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-36">
+  <div class="lplh-26" style="text-align: center;">
+  <span style="font-size:14px;"><span style="font-family:pt serif;">对于某个知识，你有不同意见？来这里和同学们切磋一下吧。</span></span>
+  </div>
+  </div>
+  <div class="lp-element lp-pom-image" id="lp-pom-image-38">
+  <div class="lp-pom-image-container" style="overflow: hidden;">
+  <img src="https://d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/simple-video-139972/transparent.gif" alt=""></div>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-39">
+  <h3 class="lplh-24" style="text-align: center;">
+  <span style="color:#36b3a8;"><span style="font-size:20px;"><span style="font-family:pt sans;"><strong>提问</strong></span></span></span>
+  <br>
+  </h3>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-40">
+  <div class="lplh-26" style="text-align: center;">
+  <span style="font-size:14px;"><span style="font-family:pt serif;">这门知识值不值得学？该怎么学？学完之后有什么收获？来这里向学习达人们提问吧。</span></span>
+  </div>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-41">
+  <p class="lplh-26">
+  <span style="font-family:pt serif;"><span style="font-size:14px;"> 内容付费突然火了起来，对于热爱学习的我们来说是一件好事。但是各种神奇夸张的广告漫天飞，有点看昏了眼。KnewMark 的适时出现，成为了我选课的参考标准。</span></span>
+  </p>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-42">
+  <div class="lplh-22">
+  <span style="font-size:13px;"><strong><span style="font-family:pt sans;">John Smith</span></strong></span>
+  </div>
+  <div class="lplh-22">
+  <span style="color:#36b3a8;"><span style="font-size:13px;"><span style="font-family:pt sans;">@JohnSmith</span></span></span>
+  </div>
+  </div>
+  <div class="lp-element lp-pom-box" id="lp-pom-box-45">
+  <div id="lp-pom-box-45-color-overlay"></div>
+  <div class="lp-element lp-pom-image" id="lp-pom-image-74">
+  <div class="lp-pom-image-container" style="overflow: hidden;">
+  <img src="https://d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/simple-video-139972/88ca9227-simple-testimonial-johnsmith.png" alt=""></div>
+  </div>
+  </div>
+  <div class="lp-element lp-pom-box" id="lp-pom-box-51">
+  <div id="lp-pom-box-51-color-overlay"></div>
+  <div class="lp-element lp-pom-image" id="lp-pom-image-75">
+  <div class="lp-pom-image-container" style="overflow: hidden;">
+  <img src="https://d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/simple-video-139972/514e98fc-simple-testimonial-janesmith.png" alt=""></div>
+  </div>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-53">
+  <p class="lplh-26">
+  <span style="font-family:pt serif;"><span style="font-size:14px;">有太多东西想学，可是时间不够用。满怀期待地买了一堆的课，却经常发现水分太多，干货太少。现在买课之前，我都要先上 KnewMark 查一查。我自己学完之后也会上 KnewMark 发表评测。</span></span>
+  </p>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-54">
+  <div class="lplh-22">
+  <span style="font-size:13px;"><strong><span style="font-family:pt sans;">Jane Smith</span></strong></span>
+  </div>
+  <div class="lplh-22">
+  <span style="color:#36b3a8;"><span style="font-size:13px;"><span style="font-family:pt sans;">@JaneSmith</span></span></span>
+  </div>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-56">
+  <p class="lplh-43" style="text-align: center;">
+  <span style="font-size:42px;"><span style="color:#ffffff;"><span style="font-family:pt sans;">终身学习者在这里找到了同伴</span></span></span>
+  </p>
+  </div>
+  <a class="lp-element lp-pom-button" id="lp-pom-button-58" href="<%= knowledges_path %>" target=""><span class="label">立即加入我们</span></a>
+  <div class="lp-element lp-pom-image" id="lp-pom-image-80">
+  <div class="lp-pom-image-container" style="overflow: hidden;">
+  <img src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-06-19-android-chrome-192x192.png" alt=""></div>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-81">
+  <p class="lplh-22" style="text-align: right;">
+  <span style="color:#ffffff;"><span style="font-size:16px;">Mark Your Knowledges</span></span>
+  </p>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-83">
+  <div class="lplh-22">
+  <span style="color:#ccc;"><span style="font-size:14px;"><span style="font-family:pt sans;">&copy; Copyright 2017</span></span></span>
+  </div>
+  </div>
+  <div class="lp-element lp-pom-image" id="lp-pom-image-84">
+  <div class="lp-pom-image-container" style="overflow: hidden;">
+  <img src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-06-19-android-chrome-192x192.png" alt=""></div>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-130">
+  <h2 class="lplh-34" style="text-align: center;">
+  <span style="font-size:28px;"><span style="color:#333333;"><strong><span style="font-family:pt serif;">为终身学习者们提供纯净的交流空间</span></strong></span></span>
+  </h2>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-131">
+  <div class="lplh-29" style="text-align: center;">
+  <span style="font-size:16px;"><span style="font-family:pt serif;">当今时代是知识爆炸的时代，同时也是知识产品爆炸的时代，除了读书，我们有了更加多样的知识获取渠道。作为终身学习者，我们每天都在不停地学习各种新知，遇到好的知识，我们希望和同行者交流。</span></span>
+  </div>
+  <div>&nbsp;</div>
+  </div>
+  <div class="lp-element lp-pom-text nlh" id="lp-pom-text-143">
+  <p>
+  <span style="color: rgb(255, 255, 255); font-size: 26px;">Knewmark</span>
+  </p>
+  </div>
+  </div>
+  <div class="lp-element lp-pom-block" id="lp-pom-block-8">
+  <div class="lp-pom-video-background" id="lp-pom-block-8-video-background" data-ratio="1.778">
+  <div class="lp-pom-video-background-image" id="lp-pom-block-8-video-background-image" style="top: -4%; left: 0px; height: 107%; width: 100%;"></div>
+  <!-- <iframe class="lp-pom-video-background-iframe lp-pom-video-background-iframe-vimeo" id="lp-pom-block-8-video-background-iframe" src="http://player.vimeo.com/video/160130577?background=1&amp;autoplay=0&amp;loop=0&amp;badge=0&amp;byline=0&amp;title=0&amp;portrait=0" frameborder="0" allowfullscreen=""></iframe> -->
+  </div>
+  <div id="lp-pom-block-8-color-overlay"></div>
+  <div class="lp-pom-block-content"></div>
+  </div>
+  <div class="lp-element lp-pom-block" id="lp-pom-block-9">
+  <div id="lp-pom-block-9-color-overlay"></div>
+  <div class="lp-pom-block-content"></div>
+  </div>
+  <div class="lp-element lp-pom-block" id="lp-pom-block-129">
+  <div id="lp-pom-block-129-color-overlay"></div>
+  <div class="lp-pom-block-content"></div>
+  </div>
+  <div class="lp-element lp-pom-block" id="lp-pom-block-11">
+  <div id="lp-pom-block-11-color-overlay"></div>
+  <div class="lp-pom-block-content"></div>
+  </div>
+  <div class="lp-element lp-pom-block" id="lp-pom-block-12">
+  <div id="lp-pom-block-12-color-overlay"></div>
+  <div class="lp-pom-block-content"></div>
+  </div>
+  <div class="lp-element lp-pom-block" id="lp-pom-block-55">
+  <div id="lp-pom-block-55-color-overlay"></div>
+  <div class="lp-pom-block-content"></div>
+  </div>
+  <div class="lp-element lp-pom-block" id="lp-pom-block-13">
+  <div id="lp-pom-block-13-color-overlay"></div>
+  <div class="lp-pom-block-content"></div>
+  </div>
+
+  </div>
+  <!-- lp:insertions start body:after -->
+  <div id="lp-pom-image-27-holder" class="lp-pom-image-holder"></div>
+  <div id="lp-pom-image-34-holder" class="lp-pom-image-holder"></div>
+  <div id="lp-pom-image-38-holder" class="lp-pom-image-holder"></div>
+  <script type="text/javascript">
+    function updateViewport() {
+      var viewport = document.querySelector('meta[name="viewport"]');
+      if (viewport && window.innerWidth > 600 && window.innerWidth < 1024) {
+        var defaultDeviceWidth = window.innerWidth;
+        var defaultPageWidth = document.getElementById('lp-pom-root').offsetWidth;
+        var calculatedScale = (defaultDeviceWidth / defaultPageWidth);
+        var viewportContent = 'initial-scale=' + calculatedScale + ', user-scalable=yes';
+        if (defaultDeviceWidth >= defaultPageWidth) {
+          viewportContent = 'initial-scale=1.0, ' + 'width=device-width, ' + 'user-scalable=yes';
+        }
+        viewport.content = viewportContent;
+      }
+    }
+    lp.jQuery(document).ready(updateViewport);
+    window.addEventListener('orientationchange', updateViewport);
+  </script>
+  <script>
+  function disableParallaxOnMobile() {
+    if (navigator.userAgent.match(/(Android|iPod|iPhone|iPad|iemobile|blackberry)/)) {
+      var parallaxEls = lp.jQuery('.lp-pom-root, .lp-pom-block');
+      for (i = 0; i < parallaxEls.length; i++) {
+        var parallaxEl = parallaxEls[i];
+        if (lp.jQuery(parallaxEl).css('background-attachment') === 'fixed') {
+          parallaxEl.style['background-attachment'] = 'scroll';
+        };
+      };
+    }
+  }
+
+  disableParallaxOnMobile();
+
+  window.addEventListener("orientationchange", function() {
+    disableParallaxOnMobile();
+  }, false);
+  </script>
+
+  <script type="text/javascript">// See README.md for documentation
+  lp.jQuery().ready(function($) {
+    $('input[name^=ubafs-]', 'form').remove();
+
+    var info = JSON.stringify({
+      date: new Date(),
+      agent: navigator.userAgent,
+      screen: {
+        availWidth: screen.availWidth,
+        availHeight: screen.availHeight,
+        width: screen.width,
+        height: screen.height
+      },
+      window: {
+        innerWidth: window.innerWidth,
+        innerHeight: window.innerHeight
+      },
+      hasPlugins: ('length' in navigator.plugins && navigator.plugins.length > 0)
+    });
+
+    var jevField = $('<input type="hidden" id="ubafs-jev" name="ubafs-jev">').val(info);
+    $('form').append(jevField);
+  });
+  </script>
+  <!-- lp:insertions end body:after -->
+</body>
