--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -11,7 +11,7 @@
           </p>
         </div>
         <div class="article-content">
-          <p><%= sanitize @question.description %></p>
+          <p><%= sanitize @question.content %></p>
         </div>
 
       </article>
@@ -37,7 +37,7 @@
     </section>
 
     <section class="section-footer">
-      
+
     </section>
   </main>
 </div>
