--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
   <span style="color:#ffffff;"><span style="font-size:16px;">学习之后，来这里交流</span></span>
   </p>
   </div>
-  <a class="lp-element lp-pom-button" id="lp-pom-button-16" href="<%= knowledges_path %>" target=""><span class="label">立即加入我们</span></a>
+  <a class="lp-element lp-pom-button" id="lp-pom-button-16" href="<%= posts_path %>" target=""><span class="label">立即加入我们</span></a>
   <div class="lp-element lp-pom-text nlh" id="lp-pom-text-20">
   <p class="lplh-18" style="text-align: center;">
   <font color="#c1c1c1" face="pt sans"><span style="font-size: 14px;"><strong>在内容付费狂热的时代，<span style="color: rgb(193, 193, 193);">KnewMark</span> 为各位学习者提供一个说悄悄话的场所</strong></span></font>
