--- a/app/assets/stylesheets/knowledges.scss
+++ b/app/assets/stylesheets/knowledges.scss
@@ -210,6 +210,7 @@ section .knowledge-pictures {
 
 .article-content, .article-info {
   padding: 0.5em 1em;
+  word-break: break-all;
 }
 
 article {
