--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -10,12 +10,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><i class="fa fa-bookmark-o logo" aria-hidden="true"></i> KnewMark</a>
+          <a class="navbar-brand" href="/posts"><i class="fa fa-bookmark-o logo" aria-hidden="true"></i> KnewMark</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><%= link_to '发现', knowledges_path %></li>
+            <li><%= link_to '文章', main_app.posts_path %></li>
+            <li><%= link_to '发现', main_app.knowledges_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 知识分类<span class="caret"></span>
