--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,42 @@
+<div class="page-content">
+  <div class="container">
+    <!-- <div class="row"> -->
+    <div class="article-list">
+      <% @activities.each do |activity| %>
+        <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="article">
+            <div class="article-cover">
+              <a href="<%= knowledge_path(activity.parameters[:knowledge_id]) %>">
+                <% if activity.trackable.knowledge.photos.present? %>
+                  <%= image_tag(activity.trackable.knowledge.photos[0].image.url, class: 'thumbnail') %>
+                <% else %>
+                  <%= image_tag("http://via.placeholder.com/250/87CEFA/ffffff?&text=#{activity.trackable.knowledge.title}", class: 'thumbnail') %>
+                <% end %>
+              </a>
+            </div>
+            <div class="article-content">
+              <% if activity.trackable_type == "Review" %>
+                <i class="fa fa-pen-circle-o fa-2x pull-right" aria-hidden="true"></i>
+              <% elsif activity.trackable_type == "Question" %>
+                <i class="fa fa-question-square-o fa-2x pull-right" aria-hidden="true"></i>
+              <% end %>
+              <h3>
+                <% if activity.trackable_type == "Review" %>
+                  <%= link_to activity.trackable.title.truncate(20), review_path(activity.trackable.friendly_id) %>
+                <% elsif activity.trackable_type == "Question" %>
+                  <%= link_to activity.trackable.title.truncate(20), question_path(activity.trackable.friendly_id) %>
+                <% end %>
+              </h3>
+              <p> <%= sanitize(activity.trackable.content.truncate(140)) %> </p>
+              <p style="text-align:right;">
+                <%= display_avatar(activity.owner, "25x25", "img-circle") %>  <%= link_to activity.owner.username, activity.owner if activity.owner %>
+              <small><%= time_ago(activity) %></small>
+              </p>
 
-        <% @activities.each do |activity| %>
-          <div class="activity">
-
-            <% if activity.trackable %>
-            <% if activity.trackable_type == "Review" || activity.trackable_type == "Question"%>
-
-            <%= link_to activity.owner.username, activity.owner if activity.owner %>
-            <%= render_activity activity %>
-            <%= time_ago(activity) %>
+            </div>
           </div>
-          <% end %>
-          <% end %>
-        <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
