--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,11 +27,11 @@
                   <%= link_to post.title.truncate(20), knowledge_question_path(post.knowledge_id, post.friendly_id) %>
                 <% end %>
               </h3>
-              <p style="text-align:right;">
+              <div class="brief"> <%= simple_format(post.content.truncate(140)) %> </div>
+              <div style="text-align:right;">
                 <%= display_avatar(post.user, "25x25", "img-circle") %>  <%= link_to post.user.username%>
               <small><%= time_ago(post) %></small>
-              </p>
-              <p> <%= simple_format(post.content.truncate(140)) %> </p>
+              </div>
 
 
             </div>
